// App Name
const String appName = "GitSync";

// Routes
const String settings_main = "/settings_main";
const String file_explorer = "/file_explorer";
const String code_editor = "/code_editor";
const String clone_repo_main = "/clone_repo_main";
...
