...
    "remoteUrl": "Remote URL",
    "setRemoteUrl": "Set Remote URL",
    "launchInBrowser": "Launch in Browser",
    "auth": "AUTH",
    "openFileExplorer": "Browse & Edit",
    "syncSettings": "Sync Settings",
    "enableApplicationObserver": "App Sync Settings",
    "appSyncDescription": "Automatically syncs when your selected app is opened or closed",
    "appSyncIosDescription": "Automatically syncs when GitSync is opened or closed",
    "iosAppSyncDocsLinkText": "Sync when other apps are opened/closed",
    "accessibilityServiceDisclosureTitle": "Accessibility Service Disclosure",
    "accessibilityServiceDisclosureMessage": "To enhance your experience,\nGitSync uses Android's Accessibility Service to detect when apps are opened or closed.\n\nThis helps us provide tailored features without storing or sharing any data.\n\nᴘʟᴇᴀsᴇ ᴇɴᴀʙʟᴇ ɢɪᴛsʏɴᴄ ᴏɴ ᴛʜᴇ ɴᴇxᴛ sᴄʀᴇᴇɴ",
    "search": "Search",
    "searchEllipsis": "Search…",
    "applicationNotSet": "Select App(s)",
    "selectApplication": "Select application(s)",
    "multipleApplicationSelected": "Selected (%s)",
    "saveApplication": "Save",
    "syncOnAppClosed": "Sync on app(s) closed",
    "syncOnAppOpened": "Sync on app(s) opened",
    "iosSyncOnAppClosed": "Sync on GitSync closed",
    "iosSyncOnAppOpened": "Sync on GitSync opened",
    "scheduledSyncSettings": "Scheduled Sync Settings",
    "scheduledSyncDescription": "Automatically syncs periodically in the background",
    "tabHome": "Home",
    "iosDefaultSyncRate": "when iOS allows",
...
